<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_subtitle"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/labelemail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/labelPass"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/txButtonSigin"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/toregister"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/toregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="38dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/toregister"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Registertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="209dp"
        android:layout_toEndOf="@+id/toregister"
        android:clickable="true"
        android:fontFamily="@font/roboto_regular"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/labelRegister"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>